2001-07-15  Tom Tromey  <tromey@redhat.com>

	* lib/am/tags.am (distclean-tags): Remove files for gtags.
	From Shigio Yamaguchi.

2001-07-14  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* lib/am/distdir.am (distcheck): Emit diagnostic when files
	remain after "make uninstall".

2001-07-14  Tom Tromey  <tromey@redhat.com>

	* lib/am/tags.am (.PHONY): Depend on GTAGS.  From Shigio Yamaguchi.

	* lib/missing (makeinfo): Redirect stdout and stderr outside
	subshell.  From Alexandre Oliva.

2001-07-14  Akim Demaille  <akim@epita.fr>

	* automake.in ($obsolete_rx): No need for `\b(foo\b|\bbar)\b',
	`\b(foo|bar)\b' is what we want.
	* aclocal.in: Likewise.

2001-07-14  Akim Demaille  <akim@epita.fr>

	* m4/depend.m4 (AM_DEPENDENCIES): Don't define `depcpp' which is
	not used.
	Do not require the corresponding AC_PROG_CC as AC_PROG_CC is
	actually modified to require AM_DEPENDENCIES.
	Rename `confdir' as `conftest.dir' so that the configure trap
	remove it.

2001-07-04  Tom Tromey  <tromey@redhat.com>

	Fix for nolink.test:
	* tests/Makefile.am (XFAIL_TESTS): Removed nolink.test.
	* lib/am/program.am (%PROGRAM%%EXEEXT%): Use %EXEEXT%.
	* automake.in (am_install_var): Only rewrite PROGRAMS if
	$seen_exeext.
	(make_paragraphs): Always define %EXEEXT%.

2001-07-04  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/nolink.test: New file.
	* tests/Makefile.am (TEST, XFAIL_TESTS): Add nolink.test.

2001-07-04  OKUJI Yoshinori  <okuji@gnu.org>

	* automake.in (scan_texinfo_file): Add the second argument to
	`@syncodeindex' into @CLEAN_SUFFIXES, because the combined index
	itself may not be used directly.

2001-07-04  Tom Tromey  <tromey@redhat.com>

	* missing: Updated.
	* lib/missing (makeinfo): Use subshell, not explicit sh
	invocation.

	* automake.texi (Headers): Mention that we prefer uninstalled
	headers in _SOURCES.
	(ANSI): Mention cross-compilation limitation.

2001-07-03  Tom Tromey  <tromey@redhat.com>

	* configure.in: Upped to 1.4i.
