@@ -1,5 +1,11 @@
 2001-07-15  Tom Tromey  <tromey@redhat.com>
 
+	Report from Ralf Corsepius:
+	* automake.in (TARGET_PATTERN): Add `+' as valid character.
+	(SUFFIX_RULE_PATTERN): Likewise.
+	* tests/Makefile.am (TESTS): Added cxx.test.
+	* tests/cxx.test: New file.
+
 	* lib/am/tags.am (distclean-tags): Remove files for gtags.
 	From Shigio Yamaguchi.
 
